Add developer profiles page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -58,11 +58,6 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"
-      integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/cf0323ee8f.js"></script>
   </body>
 </html>
